<resources>
    <string name="app_name">Calculator</string>
    <string name="buttonText1">1</string>
    <string name="buttonText2">2</string>
    <string name="buttonText3">3</string>
    <string name="buttonText4">4</string>
    <string name="buttonText5">5</string>
    <string name="buttonText6">6</string>
    <string name="buttonText7">7</string>
    <string name="buttonText8">8</string>
    <string name="buttonText9">9</string>
    <string name="buttonText0">0</string>
    <string name="buttonTextPt">.</string>
    <string name="buttonTextPlus">+</string>
    <string name="buttonTextMinus">\u2212</string>
<!--    <string name="buttonTextMultiply">\u00D7</string>-->
<!--    <string name="buttonTextDivide">\u00F7</string>-->
    <string name="buttonTextMultiply">*</string>
    <string name="buttonTextDivide">/</string>
    <string name="buttonTextEqual">=</string>
    <string name="buttonTextDel">C</string>
    <string name="buttonTextPlusMinus">\u00B1</string>
    <string name="buttonLeftBracket">(</string>
    <string name="buttonRightBracket">)</string>
    <string name="excDiv0">Деление на 0 запрещено</string>
    <string name="exc">Неопознанная ошибка</string>
    <string name="infinite">Ошибка переполнения</string>
    <string name="wrongInput">Неправильный ввод</string>
    <string name="day_night_switch">день/ночь</string>
    <string name="settings_button_text">Настройки</string>
    <string name="save_settings_button_text">Сохранить</string>
    <string name="hintToOuterCall">Нажмите \"=\"</string>
    <string name="buttonTextPrc">%</string>
    <string name="buttonTextDeg">^</string>
    <string name="buttonTextSqrt">√</string>
    <string name="buttonTextLn">\u33D1</string>
    <string name="buttonTextLog">\u33D2</string>
    <string name="buttonTextE">e</string>

</resources>