<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@drawable/notebook11"
    
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gLineH1"

        android:padding="10dp"
        android:textSize="42sp"
        android:layout_weight="1"
         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLineH1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLineH2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLineH3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLineH4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLineH5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLineV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLineV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gLineV3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        />

    <TextView
        android:id="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gLineV3"
        app:layout_constraintTop_toTopOf="@id/gLineH1"
        app:layout_constraintBottom_toBottomOf="@id/gLineH2"
        style="@style/symbol_constraint_style"
/>

    <Button
        android:id="@+id/buttonDel"
        app:layout_constraintStart_toStartOf="@id/gLineV3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gLineH1"
        app:layout_constraintBottom_toBottomOf="@id/gLineH2"

        style="@style/symbol_constraint_style"
        android:text="@string/buttonTextDel" />


    <Button
        android:id="@+id/button7"
        style="@style/button_constraint_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gLineV1"
        app:layout_constraintTop_toTopOf="@id/gLineH2"
        app:layout_constraintBottom_toBottomOf="@id/gLineH3"
        android:text="@string/buttonText7" />

    <Button
        android:id="@+id/button8"
        app:layout_constraintStart_toStartOf="@id/gLineV1"
        app:layout_constraintEnd_toEndOf="@id/gLineV2"
        app:layout_constraintTop_toTopOf="@id/gLineH2"
        app:layout_constraintBottom_toBottomOf="@id/gLineH3"
        style="@style/button_constraint_style"
        android:text="@string/buttonText8" />

    <Button
        android:id="@+id/button9"
        app:layout_constraintStart_toStartOf="@id/gLineV2"
        app:layout_constraintEnd_toEndOf="@id/gLineV3"
        app:layout_constraintTop_toTopOf="@id/gLineH2"
        app:layout_constraintBottom_toBottomOf="@id/gLineH3"
        style="@style/button_constraint_style"
        android:text="@string/buttonText9" />

    <Button
        android:id="@+id/buttonDivide"
        app:layout_constraintStart_toStartOf="@id/gLineV3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gLineH2"
        app:layout_constraintBottom_toBottomOf="@id/gLineH3"
        style="@style/symbol_constraint_style"
        android:text="@string/buttonTextDivide" />

    <Button
        android:id="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gLineV1"
        app:layout_constraintTop_toTopOf="@id/gLineH3"
        app:layout_constraintBottom_toBottomOf="@id/gLineH4"
        style="@style/button_constraint_style"
        android:text="@string/buttonText4" />

    <Button
        android:id="@+id/button5"
        app:layout_constraintStart_toStartOf="@id/gLineV1"
        app:layout_constraintEnd_toEndOf="@id/gLineV2"
        app:layout_constraintTop_toTopOf="@id/gLineH3"
        app:layout_constraintBottom_toBottomOf="@id/gLineH4"
        style="@style/button_constraint_style"
        android:text="@string/buttonText5" />

    <Button
        android:id="@+id/button6"
        app:layout_constraintStart_toStartOf="@id/gLineV2"
        app:layout_constraintEnd_toEndOf="@id/gLineV3"
        app:layout_constraintTop_toTopOf="@id/gLineH3"
        app:layout_constraintBottom_toBottomOf="@id/gLineH4"
        style="@style/button_constraint_style"
        android:text="@string/buttonText6" />

    <Button
        android:id="@+id/buttonMultiply"
        app:layout_constraintStart_toStartOf="@id/gLineV3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gLineH3"
        app:layout_constraintBottom_toBottomOf="@id/gLineH4"
        style="@style/symbol_constraint_style"
        android:text="@string/buttonTextMultiply" />

    <Button
        android:id="@+id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gLineV1"
        app:layout_constraintTop_toTopOf="@id/gLineH4"
        app:layout_constraintBottom_toBottomOf="@id/gLineH5"
        style="@style/button_constraint_style"
        android:text="@string/buttonText1" />

    <Button
        android:id="@+id/button2"
        app:layout_constraintStart_toStartOf="@id/gLineV1"
        app:layout_constraintEnd_toEndOf="@id/gLineV2"
        app:layout_constraintTop_toTopOf="@id/gLineH4"
        app:layout_constraintBottom_toBottomOf="@id/gLineH5"
        style="@style/button_constraint_style"
        android:text="@string/buttonText2" />

    <Button
        android:id="@+id/button3"
        app:layout_constraintStart_toStartOf="@id/gLineV2"
        app:layout_constraintEnd_toEndOf="@id/gLineV3"
        app:layout_constraintTop_toTopOf="@id/gLineH4"
        app:layout_constraintBottom_toBottomOf="@id/gLineH5"
        style="@style/button_constraint_style"
        android:text="@string/buttonText3" />

    <Button
        android:id="@+id/buttonMinus"
        app:layout_constraintStart_toStartOf="@id/gLineV3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gLineH4"
        app:layout_constraintBottom_toBottomOf="@id/gLineH5"
        style="@style/symbol_constraint_style"
        android:text="@string/buttonTextMinus" />

    <Button
        android:id="@+id/buttonPt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gLineV1"
        app:layout_constraintTop_toTopOf="@id/gLineH5"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/button_constraint_style"
        android:text="@string/buttonTextPt" />

    <Button
        android:id="@+id/button0"
        app:layout_constraintStart_toStartOf="@id/gLineV1"
        app:layout_constraintEnd_toEndOf="@id/gLineV2"
        app:layout_constraintTop_toTopOf="@id/gLineH5"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/button_constraint_style"
        android:text="@string/buttonText0" />

    <Button
        android:id="@+id/buttonEqual"
        app:layout_constraintStart_toStartOf="@id/gLineV2"
        app:layout_constraintEnd_toEndOf="@id/gLineV3"
        app:layout_constraintTop_toTopOf="@id/gLineH5"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/symbol_constraint_style"
        android:text="@string/buttonTextEqual" />

    <Button
        app:layout_constraintStart_toStartOf="@id/gLineV3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gLineH5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/buttonPlus"
        style="@style/symbol_constraint_style"
        android:text="@string/buttonTextPlus" />

</androidx.constraintlayout.widget.ConstraintLayout>